--- a/environments/microsweeper-dev/apps/app-microsweeper-quarkus/services/microsweeper-quarkus/base/config/300-route.yaml
+++ b/environments/microsweeper-dev/apps/app-microsweeper-quarkus/services/microsweeper-quarkus/base/config/300-route.yaml
@@ -1,13 +1,14 @@
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
-  labels:
-    app: microsweeper-quarkus
+  creationTimestamp: null
   name: microsweeper-quarkus
+  namespace: microsweeper-dev
 spec:
   port:
-    targetPort: 8080-tcp
+    targetPort: http
   to:
     kind: Service
     name: microsweeper-quarkus
     weight: 100
+  wildcardPolicy: None
