--- a/config/argocd/kustomization.yaml
+++ b/config/argocd/kustomization.yaml
@@ -1,6 +1,6 @@
 resources:
 - argo-app.yaml
 - cicd-app.yaml
-- microsweeper-dev-app-microsweeper-quarkus-app.yaml
-- microsweeper-dev-env-app.yaml
-- microsweeper-stage-env-app.yaml
+- dev-app-microsweeper-quarkus-app.yaml
+- dev-env-app.yaml
+- stage-env-app.yaml
