--- a/environments/dev/apps/app-microsweeper-quarkus/services/microsweeper-quarkus/base/config/100-deployment.yaml
+++ b/environments/dev/apps/app-microsweeper-quarkus/services/microsweeper-quarkus/base/config/100-deployment.yaml
@@ -1,7 +1,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  creationTimestamp: null
+  annotations:
+    app.openshift.io/vcs-uri: https://github.com/jamesfalkner/microsweeper-quarkus
   labels:
     app.kubernetes.io/name: microsweeper-quarkus
     app.kubernetes.io/part-of: app-microsweeper-quarkus
@@ -22,7 +23,7 @@ spec:
         app.kubernetes.io/part-of: app-microsweeper-quarkus
     spec:
       containers:
-      - image: nginxinc/nginx-unprivileged:latest
+      - image: quay.io/jamesfalkner1/microsweeper-quarkus:latest
         imagePullPolicy: Always
         name: microsweeper-quarkus
         ports:
