--- a/environments/dev/apps/app-microsweeper-quarkus/services/microsweeper-quarkus/base/config/100-deployment.yaml
+++ b/environments/dev/apps/app-microsweeper-quarkus/services/microsweeper-quarkus/base/config/100-deployment.yaml
@@ -23,7 +23,7 @@ spec:
         app.kubernetes.io/part-of: app-microsweeper-quarkus
     spec:
       containers:
-      - image: quay.io/jfalkner1/microsweeper-quarkus:latest
+      - image: quay.io/jfalkner1/microsweeper-quarkus:main-4e673ba011d978206b604f40534787c770e0409e
         imagePullPolicy: Always
         name: microsweeper-quarkus
         ports:
