--- a/environments/prod/apps/app-microsweeper-quarkus/services/microsweeper-quarkus/base/config/200-service.yaml
+++ b/environments/prod/apps/app-microsweeper-quarkus/services/microsweeper-quarkus/base/config/200-service.yaml
@@ -6,7 +6,7 @@ metadata:
     app.kubernetes.io/name: microsweeper-quarkus
     app.kubernetes.io/part-of: app-microsweeper-quarkus
   name: microsweeper-quarkus
-  namespace: stage
+  namespace: prod
 spec:
   ports:
   - name: http
