--- a/environments/prod/apps/app-microsweeper-quarkus/services/microsweeper-quarkus/base/config/300-route.yaml
+++ b/environments/prod/apps/app-microsweeper-quarkus/services/microsweeper-quarkus/base/config/300-route.yaml
@@ -3,7 +3,7 @@ kind: Route
 metadata:
   creationTimestamp: null
   name: microsweeper-quarkus
-  namespace: stage
+  namespace: prod
 spec:
   port:
     targetPort: http
