--- a/config/argocd/prod-env-app.yaml
+++ b/config/argocd/prod-env-app.yaml
@@ -2,15 +2,15 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   creationTimestamp: null
-  name: stage-env
+  name: prod-env
   namespace: openshift-gitops
 spec:
   destination:
-    namespace: stage
+    namespace: prod
     server: https://kubernetes.default.svc
   project: default
   source:
-    path: environments/stage/env/overlays
+    path: environments/prod/env/overlays
     repoURL: https://github.com/jamesfalkner/microsweeper-gitops.git
   syncPolicy:
     automated:
