--- a/environments/prod/apps/app-microsweeper-quarkus/services/microsweeper-quarkus/base/config/100-deployment.yaml
+++ b/environments/prod/apps/app-microsweeper-quarkus/services/microsweeper-quarkus/base/config/100-deployment.yaml
@@ -7,7 +7,7 @@ metadata:
     app.kubernetes.io/name: microsweeper-quarkus
     app.kubernetes.io/part-of: app-microsweeper-quarkus
   name: microsweeper-quarkus
-  namespace: stage
+  namespace: prod
 spec:
   replicas: 1
   selector:
