--- a/environments/prod/apps/app-microsweeper-quarkus/services/microsweeper-quarkus/base/config/101-dbdeployment.yaml
+++ b/environments/prod/apps/app-microsweeper-quarkus/services/microsweeper-quarkus/base/config/101-dbdeployment.yaml
@@ -2,7 +2,7 @@ kind: DeploymentConfig
 apiVersion: apps.openshift.io/v1
 metadata:
   name: postgresql
-  namespace: stage
+  namespace: prod
 spec:
   strategy:
     type: Recreate
