--- a/environments/prod/apps/app-microsweeper-quarkus/services/microsweeper-quarkus/base/config/201-dbservice.yaml
+++ b/environments/prod/apps/app-microsweeper-quarkus/services/microsweeper-quarkus/base/config/201-dbservice.yaml
@@ -6,7 +6,7 @@ metadata:
     app.kubernetes.io/name: microsweeper-quarkus
     app.kubernetes.io/part-of: app-microsweeper-quarkus
   name: postgresql
-  namespace: stage
+  namespace: prod
 spec:
   ports:
     - name: postgresql
