--- a/environments/prod/env/base/prod-environment.yaml
+++ b/environments/prod/env/base/prod-environment.yaml
@@ -6,6 +6,6 @@ metadata:
   creationTimestamp: null
   labels:
     argocd.argoproj.io/managed-by: openshift-gitops
-  name: stage
+  name: prod
 spec: {}
 status: {}
