--- a/config/argocd/kustomization.yaml
+++ b/config/argocd/kustomization.yaml
@@ -2,5 +2,6 @@ resources:
 - argo-app.yaml
 - cicd-app.yaml
 - dev-app-microsweeper-quarkus-app.yaml
+- prod-app-microsweeper-quarkus-app.yaml
 - dev-env-app.yaml
 - prod-env-app.yaml
