--- a/environments/prod/apps/app-microsweeper-quarkus/services/microsweeper-quarkus/base/config/100-deployment.yaml
+++ b/environments/prod/apps/app-microsweeper-quarkus/services/microsweeper-quarkus/base/config/100-deployment.yaml
@@ -26,6 +26,19 @@ spec:
       - image: quay.io/jfalkner1/microsweeper-quarkus:main-4e673ba011d978206b604f40534787c770e0409e
         imagePullPolicy: Always
         name: microsweeper-quarkus
+        env:
+          - name: QUARKUS_DATASOURCE_USERNAME
+            valueFrom:
+              secretKeyRef:
+                name: postgresql
+                key: database-user
+          - name: QUARKUS_DATASOURCE_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: postgresql
+                key: database-password
+          - name: QUARKUS_DATASOURCE_JDBC_URL
+            value: "jdbc:postgresql://postgresql/scores"
         ports:
         - containerPort: 8080
         resources: {}
