--- a/environments/prod/apps/app-microsweeper-quarkus/services/microsweeper-quarkus/base/config/101-dbdeployment.yaml
+++ b/environments/prod/apps/app-microsweeper-quarkus/services/microsweeper-quarkus/base/config/101-dbdeployment.yaml
@@ -71,7 +71,7 @@ spec:
           ports:
             - containerPort: 5432
               protocol: TCP
-          image: postgresql:10-el8
+          image: image-registry.openshift-image-registry.svc:5000/openshift/postgresql:10-el8
           imagePullPolicy: IfNotPresent
           volumeMounts:
             - name: postgresql-data
