--- a/config/argocd/prod-env-app.yaml
+++ b/config/argocd/prod-env-app.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   destination:
     namespace: prod
-    server: https://kubernetes.default.svc
+    server: prodcluster
   project: default
   source:
     path: environments/prod/env/overlays
