--- a/config/argocd/prod-env-app.yaml
+++ b/config/argocd/prod-env-app.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   destination:
     namespace: prod
-    server: https://api.theprod.rh-apps.org:6443
+    server: https://kubernetes.default.svc
   project: default
   source:
     path: environments/prod/env/overlays
