--- a/environments/dev/apps/app-microsweeper-quarkus/services/microsweeper-quarkus/base/config/100-deployment.yaml
+++ b/environments/dev/apps/app-microsweeper-quarkus/services/microsweeper-quarkus/base/config/100-deployment.yaml
@@ -26,6 +26,19 @@ spec:
       - image: quay.io/jfalkner1/microsweeper-quarkus:main-23bf80830031a8a2109fd5af96ea4920995b7be1
         imagePullPolicy: Always
         name: microsweeper-quarkus
+        env:
+          - name: QUARKUS_DATASOURCE_USERNAME
+            valueFrom:
+              secretKeyRef:
+                name: postgresql
+                key: database-user
+          - name: QUARKUS_DATASOURCE_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                name: postgresql
+                key: database-password
+          - name: QUARKUS_DATASOURCE_JDBC_URL
+            value: "jdbc:postgresql://postgresql/scores"
         ports:
         - containerPort: 8080
         resources: {}
