--- a/environments/dev/apps/app-microsweeper-quarkus/services/microsweeper-quarkus/base/config/101-dbdeployment.yaml
+++ b/environments/dev/apps/app-microsweeper-quarkus/services/microsweeper-quarkus/base/config/101-dbdeployment.yaml
@@ -19,6 +19,7 @@ spec:
     metadata:
       labels:
         name: postgresql
+        app.openshift.io/runtime: postgresql
     spec:
       volumes:
         - name: postgresql-data
