--- a/environments/prod/apps/app-microsweeper-quarkus/services/microsweeper-quarkus/base/config/100-deployment.yaml
+++ b/environments/prod/apps/app-microsweeper-quarkus/services/microsweeper-quarkus/base/config/100-deployment.yaml
@@ -18,6 +18,8 @@ spec:
   strategy: {}
   template:
     metadata:
+      annotations:
+        app.openshift.io/connects-to: postgresql
       labels:
         app.kubernetes.io/name: microsweeper-quarkus
         app.kubernetes.io/part-of: app-microsweeper-quarkus
