--- a/config/cicd/base/05-bindings/dev-app-microsweeper-quarkus-microsweeper-quarkus-binding.yaml
+++ b/config/cicd/base/05-bindings/dev-app-microsweeper-quarkus-microsweeper-quarkus-binding.yaml
@@ -6,6 +6,7 @@ metadata:
 spec:
   params:
   - name: imageRepo
+    # UPDATEME
     value: quay.io/jfalkner1/microsweeper-quarkus
   - name: tlsVerify
     value: "true"
