--- a/environments/dev/apps/app-microsweeper-quarkus/services/microsweeper-quarkus/base/config/100-deployment.yaml
+++ b/environments/dev/apps/app-microsweeper-quarkus/services/microsweeper-quarkus/base/config/100-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
+    # UPDATEME
     app.openshift.io/vcs-uri: https://github.com/jamesfalkner/microsweeper-quarkus
   labels:
     app.kubernetes.io/name: microsweeper-quarkus
@@ -26,6 +27,7 @@ spec:
         app.openshift.io/runtime: quarkus
     spec:
       containers:
+      # UPDATEME
       - image: quay.io/jfalkner1/microsweeper-quarkus:main-c5d938b45f9d5251744e82b8008027d8be471eaf
         imagePullPolicy: Always
         name: microsweeper-quarkus
