--- a/config/cicd/base/01-namespaces/cicd-environment.yaml
+++ b/config/cicd/base/01-namespaces/cicd-environment.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   annotations:
+    # UPDATEME
     app.openshift.io/vcs-uri: https://github.com/jamesfalkner/microsweeper-gitops.git?ref=HEAD
   labels:
     argocd.argoproj.io/managed-by: openshift-gitops
