--- a/environments/prod/env/base/prod-environment.yaml
+++ b/environments/prod/env/base/prod-environment.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   annotations:
+    # UPDATEME
     app.openshift.io/vcs-uri: https://github.com/jamesfalkner/microsweeper-gitops.git?ref=HEAD
   labels:
     argocd.argoproj.io/managed-by: openshift-gitops
