--- a/pipelines.yaml
+++ b/pipelines.yaml
@@ -13,6 +13,7 @@ environments:
           bindings:
           - dev-app-microsweeper-quarkus-microsweeper-quarkus-binding
           - github-push-binding
+      # UPDATEME
       source_url: https://github.com/jamesfalkner/microsweeper-quarkus.git
       webhook:
         secret:
@@ -25,5 +26,6 @@ environments:
       - github-push-binding
       template: app-ci-template
 - name: stage
+# UPDATEME
 gitops_url: https://github.com/jamesfalkner/microsweeper-gitops.git
 version: 1
